syntax = "proto3";

package member.v1;

option go_package = "github.com/inetcontrol/zoekdeware/api/proto/member/v1;memberv1";

import "google/protobuf/timestamp.proto";

service MemberService {
  rpc RegisterMember(RegisterMemberRequest) returns (RegisterMemberResponse);
  rpc GetMember(GetMemberRequest) returns (GetMemberResponse);
  rpc UpdateProfile(UpdateProfileRequest) returns (UpdateProfileResponse);
  rpc ActivateMember(ActivateMemberRequest) returns (ActivateMemberResponse);
}

message Member {
  string id = 1;
  string email = 2;
  Profile profile = 3;
  MemberStatus status = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}

message Profile {
  string display_name = 1;
  string bio = 2;
  google.protobuf.Timestamp birth_date = 3;
  Gender gender = 4;
  repeated string interests = 5;
  repeated string photo_urls = 6;
}

enum MemberStatus {
  MEMBER_STATUS_UNSPECIFIED = 0;
  MEMBER_STATUS_PENDING = 1;
  MEMBER_STATUS_ACTIVE = 2;
  MEMBER_STATUS_SUSPENDED = 3;
}

enum Gender {
  GENDER_UNSPECIFIED = 0;
  GENDER_MALE = 1;
  GENDER_FEMALE = 2;
  GENDER_OTHER = 3;
}

message RegisterMemberRequest {
  string email = 1;
  string password = 2;
}

message RegisterMemberResponse {
  Member member = 1;
}

message GetMemberRequest {
  string member_id = 1;
}

message GetMemberResponse {
  Member member = 1;
}

message UpdateProfileRequest {
  string member_id = 1;
  Profile profile = 2;
}

message UpdateProfileResponse {
  Member member = 1;
}

message ActivateMemberRequest {
  string member_id = 1;
}

message ActivateMemberResponse {
  Member member = 1;
}
